Fixed erroneous detection of server disconnect condition

QAbstractSocket::atEnd does not check actual connection state it
only checks if data is ready to be read. Under some conditions
(e.g.  slow network) data may not be available yet but it doesn't
mean the server dropped connection. When more data comes FSM will
pick it up and handle as expected. The right way to check disconnect
is to check for actual socket state.

Task-number: QTBUG-51069
Change-Id: I17d7110fbefdba2d5378a71935ab5923f8c1bf3e
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>